Cleanup, move to uber jar and version bumps