@@ -1,45 +1,29 @@
 buildscript {
-    ext.kotlin_version = '1.2.51'
-    ext.ktor_version = '0.9.3'
-    ext.prometheus_version = '0.3.0'
-    ext.logback_version = '1.2.3'
-    ext.logstash_encoder_version = '5.1'
-    ext.open_html_to_pdf_version = '0.0.1-RC16'
-    ext.handlebars_version = '4.1.0'
-    ext.handlebars_jackson_version = '1.0.0'
+    ext.handlebars_version = '4.1.2'
+    ext.jackson_version = '2.9.7'
+    ext.jaxb_version = "2.3.1"
     ext.jsoup_version = '1.11.3'
-    ext.jackson_version = '2.9.5'
-    ext.junit_version = '4.12'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+    ext.kluent_version = '1.42'
+    ext.ktor_version = '1.0.0'
+    ext.kotlin_version = '1.3.10'
+    ext.logback_version = '1.2.3'
+    ext.logstash_encoder_version = '5.2'
+    ext.open_html_to_pdf_version = '0.0.1-RC17'
+    ext.prometheus_version = '0.5.0'
+    ext.spek_version = "2.0.0-rc.1"
+    ext.verapdf_version = "1.12.1"
 }
 
 plugins {
     id 'org.jmailen.kotlinter' version '1.14.0'
-    id 'org.jetbrains.kotlin.jvm' version "1.2.51"
-    id 'application'
+    id 'org.jetbrains.kotlin.jvm' version "1.3.10"
+    id("com.github.johnrengelman.shadow") version "4.0.3"
 }
 
 group 'no.nav.pdfgen'
-version '1.0.8'
+version '1.0.8-SNAPSHOT'
 
-mainClassName = 'no.nav.pdfgen.BootstrapKt'
-
-applicationDefaultJvmArgs = [
-        '-XX:+UnlockExperimentalVMOptions',
-        '-XX:+UseCGroupMemoryLimitForHeap',
-        '-XX:+UseG1GC',
-        '-XshowSettings:vm',
-        '-Dlogback.configurationFile=logback-remote.xml'
-]
-
-// suppress warning for experimental coroutines
-kotlin { experimental { coroutines "enable"} }
+jar.manifest.attributes("Main-Class" : "no.nav.pdfgen.BootstrapKt")
 
 task printVersion() {
     doLast {
@@ -67,7 +51,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation "com.github.jknack:handlebars:$handlebars_version"
-    implementation "com.github.jknack:handlebars-jackson2:$handlebars_jackson_version"
+    implementation "com.github.jknack:handlebars-jackson2:$handlebars_version"
     implementation "com.openhtmltopdf:openhtmltopdf-pdfbox:$open_html_to_pdf_version"
     implementation "com.openhtmltopdf:openhtmltopdf-slf4j:$open_html_to_pdf_version"
     implementation "com.openhtmltopdf:openhtmltopdf-svg-support:$open_html_to_pdf_version"
@@ -76,6 +60,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
     implementation "javax.xml.bind:jaxb-api:2.1"
+    implementation "org.glassfish.jaxb:jaxb-runtime:$jaxb_version"
 
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "io.prometheus:simpleclient_common:$prometheus_version"
@@ -84,12 +69,12 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "net.logstash.logback:logstash-logback-encoder:$logstash_encoder_version"
 
-    testImplementation 'org.spekframework.spek2:spek-dsl-jvm:2.0.0-alpha.2'
-    testImplementation 'org.amshove.kluent:kluent:1.39'
-    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:2.0.0-alpha.2"
-    testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.2'
+    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
+    testImplementation "org.amshove.kluent:kluent:$kluent_version"
+    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:$spek_version"
+    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spek_version"
 
-    testImplementation "org.verapdf:validation-model:1.4.5"
+    testImplementation "org.verapdf:validation-model:$verapdf_version"
     testImplementation "io.ktor:ktor-client-cio:$ktor_version"
 }
 
